# fdap-login

./: Cargo.toml  readme.md  screenshot.avif
.github/workflows/: check.yml  pages.yml
source/: Cargo.toml  package.nix
source/src/: lib.rs  oidc.rs  state.rs  static_.rs  userside.rs  util.rs
source/src/interface/: config.rs  fdap.rs  mod.rs
source/templates/: auth_form.html
src/: main.rs
