[package]
name = "fdap-oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = { version = "0.6", features = ["serde_json"] }
argon2 = "0.5"
askama = "0.12"
chrono = "0.4"
cookie = "0.18"
ed25519-dalek = { version = "2", features = ["rand_core"] }
fdap = "0.1"
flowcontrol = "0.2"
governor = "0.7"
http = "1"
http-body = "1"
http-body-util = "0.1"
http-serde = "2"
htwrap = { version = "0.11" }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
loga = "0.5"
mime_guess = "2"
moka = { version = "0.12", features = ["future"] }
openidconnect = "3"
password-hash = "0.5"
path-absolutize = "3"
pkcs8 = { version = "0", features = ["pem"] }
rand = "0.8"
scrypt = "0.11"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
taskmanager = "0.6"
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
schemars = "0.8"
rpassword = "7"
